--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" >
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>IndNX 4.0 </title>
 
     <link rel="stylesheet" href="css/materialize.min.css">
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="fixed full-width" data-aos="fade-down" data-aos-offset="1200" data-aos-easing="ease-in-sine" style="z-index: 998;">
-            <nav class=" blue darken-4">
+            <nav class=" grey darken-3">
                 <div class="nav-wrapper container">
                     <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-large grey-text text-darken-2">
                         <i class="material-icons">menu</i>
@@ -122,22 +122,22 @@
         <div class="container center padded-bottom-cozy row">
 
 
-           <!-- <img src="images/things.png" alt="bfdgbjdg" style="max-width: 90vw;">-->
+            <!-- <img src="images/things.png" alt="bfdgbjdg" style="max-width: 90vw;">-->
 
-           <div class="col s12 m4 l4">
-               <img src="images/icon1.png" alt="">
-               <p style="font-size: 20px;">Pre Conference Project Competetion</p>
-           </div>
-           <div class="col s12 m4 l4">
-               <img src="images/icon2.png" alt="">
-               <p style="font-size: 20px;">
-                   Project <br> Implementation
-               </p>
-           </div>
-           <div class="col s12 m4 l4">
-               <img src="images/icon3.png" alt="">
-               <p style="font-size: 20px;">Conference <br> Day</p>
-           </div>
+            <div class="col s12 m4 l4">
+                <img src="images/icon1.png" alt="">
+                <p style="font-size: 20px;">Pre Conference Project Competetion</p>
+            </div>
+            <div class="col s12 m4 l4">
+                <img src="images/icon2.png" alt="">
+                <p style="font-size: 20px;">
+                    Project <br> Implementation
+                </p>
+            </div>
+            <div class="col s12 m4 l4">
+                <img src="images/icon3.png" alt="">
+                <p style="font-size: 20px;">Conference <br> Day</p>
+            </div>
         </div>
 
 
@@ -227,7 +227,7 @@
 </svg>
 
 
-                 <p class="flow-text light orange-text" style="font-size: 20px;">building an IoT solution</p>
+                        <p class="flow-text light orange-text" style="font-size: 20px;">building an IoT solution</p>
                     </div>
 
                     <div class="col s12 m4 l3">
@@ -318,9 +318,9 @@
 <g>
 </g>
 </svg>
-                <p class="flow-text light orange-text" style="font-size: 20px;">
-                    exposure to newer technologies
-                </p>
+                        <p class="flow-text light orange-text" style="font-size: 20px;">
+                            exposure to newer technologies
+                        </p>
                     </div>
 
                     <div class="col s12 m4 l3">
@@ -369,9 +369,9 @@
 <g>
 </g>
 </svg>
-                <p class="flow-text light orange-text" style="font-size: 19px;">
-                    learn from the market leaders
-                </p>
+                        <p class="flow-text light orange-text" style="font-size: 19px;">
+                            learn from the market leaders
+                        </p>
                     </div>
 
                     <div class="col s12 m4 l3">
@@ -412,9 +412,9 @@
 <g>
 </g>
 </svg>
-        <p class="flow-text light orange-text" style="font-size: 19px;">
-            Exploring the latest innovations
-        </p>
+                        <p class="flow-text light orange-text" style="font-size: 19px;">
+                            Exploring the latest innovations
+                        </p>
                     </div>
                 </div>
 
@@ -440,7 +440,8 @@
 
                     <h3 class="light center white-text strong" style="font-size: 100px;">Register</h3>
                     <!--  <p class="center light white-text">Ssome details about registeration if any.</p>
-                  --><h2 class="center white-text" style="font-size: 30px;">Open till 20th July 2k18</h2>
+                  -->
+                    <h2 class="center white-text" style="font-size: 30px;">Open till 20th July 2k18</h2>
                     <p class="center">
                         <a href="https://goo.gl/forms/NpKr7FkYCYPA7ySL2" class="btn btn-register-hero btn-large btn-flat yellow-text">Register now</a>
                     </p>
@@ -576,22 +577,22 @@
     -->
 
         <section>
-           <div class="grey lighten-3">
-            <div class=" container center padded-bottom-cozy ">
+            <div class="grey lighten-3">
+                <div class=" container center padded-bottom-cozy ">
 
 
 
-                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy strong " style="font-size: 50px;" data-aos="zoom-in">How IndNX 4.0 is different?</h3>
+                    <h3 class="center light orange-text padded-bottom-compact padded-top-cozy strong " style="font-size: 50px;" data-aos="zoom-in">How IndNX 4.0 is different?</h3>
 
-                <div class="row">
-                    <br>
-                    <h3 class="center light orange-text strong">Traditional Events</h3>
-                    <br><br>
-                    <div class="col s12 m4 l3">
-
+                    <div class="row">
                         <br>
+                        <h3 class="center light orange-text strong">Traditional Events</h3>
+                        <br><br>
+                        <div class="col s12 m6 l6">
 
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 297 297" enable-background="new 0 0 297 297" width="64px" height="64px">
+                            <br>
+
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 297 297" enable-background="new 0 0 297 297" width="64px" height="64px">
   <g>
     <path d="M148.5,116.187c32.029,0,58.086-26.057,58.086-58.086S180.529,0.014,148.5,0.014S90.414,26.072,90.414,58.101   S116.471,116.187,148.5,116.187z M120.402,51.894c3.429-3.427,8.985-3.427,12.414,0l8.387,8.388L164.184,37.3   c3.429-3.427,8.985-3.427,12.414,0c3.428,3.428,3.428,8.986,0,12.414L147.41,78.902c-1.714,1.713-3.96,2.571-6.207,2.571   c-2.247,0-4.493-0.857-6.207-2.571l-14.594-14.594C116.974,60.88,116.974,55.321,120.402,51.894z" fill="#FFDA44"/>
     <path d="M34.165,84.869c18.839,0,34.166-15.327,34.166-34.166S53.004,16.537,34.165,16.537S0,31.864,0,50.703   S15.326,84.869,34.165,84.869z" fill="#FFDA44"/>
@@ -602,9 +603,9 @@
   </g>
 </svg>
 
-                        <p class="flow-text light orange-text" style="font-size: 20px;">Superficial <br> discussions</p>
+                            <p class="flow-text light orange-text" style="font-size: 20px;">Superficial <br> discussions</p>
 
-                        <!-- <p class="flow-text light orange-text" style="font-size: 20px;text-align: left">Superficial discussions</p>
+                            <!-- <p class="flow-text light orange-text" style="font-size: 20px;text-align: left">Superficial discussions</p>
                                         <p class="flow-text light orange-text" style="font-size: 20px;text-align: left">Students are mere spectators</p>
 
 
@@ -612,11 +613,11 @@
                                 <p class="flow-text light orange-text" style="font-size: 20px;text-align: left">Business decision makers present their solutions </p>
                                 <p class="flow-text light orange-text" style="font-size: 20px;text-align: left">No mentoring of students </p>-->
 
-                    </div>
+                        </div>
 
-                    <div class="col s12 m4 l3">
+                        <div class="col s12 m6 l6">
 
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 28.874 28.873" style="enable-background:new 0 0 28.874 28.873;" xml:space="preserve">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 28.874 28.873" style="enable-background:new 0 0 28.874 28.873;" xml:space="preserve">
 <g>
 	<g>
 		<circle cx="11.053" cy="8.619" r="2.35" fill="#FFDA44"/>
@@ -656,28 +657,28 @@
 </g>
 </svg>
 
-                        <br><br>
-                        <p class="flow-text light orange-text" style="font-size: 20px;">Students just listen <br> about how to do it</p>
+                            <br><br>
+                            <p class="flow-text light orange-text" style="font-size: 20px;">Students just listen <br> about how to do it</p>
+                        </div>
+
+                        <div class="col s12 m6 l6">
+
+                            <svg aria-hidden="true" data-prefix="fas" data-icon="graduation-cap" class="svg-inline--fa fa-graduation-cap fa-w-20" width="64.000000pt" height="64.000000pt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="#ffd600" d="M622.884 199.005l-275.817 85.1a96 96 0 0 1-54.134 0L92.398 222.232c-8.564 11.438-11.018 23.05-11.918 38.335C89.778 266.165 96 276.355 96 288c0 11.952-6.557 22.366-16.265 27.861l16.197 123.096c.63 4.786-3.1 9.043-7.932 9.043H40c-4.828 0-8.562-4.253-7.932-9.044L48.265 315.86C38.557 310.366 32 299.952 32 288c0-12.034 6.646-22.511 16.465-27.976.947-17.951 3.974-33.231 12.152-47.597l-43.502-13.422c-22.876-6.801-22.766-39.241 0-46.01l275.817-85.1a96 96 0 0 1 54.134 0l275.817 85.1c22.877 6.801 22.767 39.241.001 46.01zM356.503 314.682l-.207.064-.207.061a127.998 127.998 0 0 1-72.177 0l-.207-.061-.207-.064-150.914-46.57L120 352c0 35.346 89.543 64 200 64s200-28.654 200-64l-12.583-83.888-150.914 46.57z"></path></svg>
+                            <p class="flow-text light orange-text" style="font-size: 20px;">Students are <br> mere spectators</p>
+
+
+                        </div>
+
+
+                        <div class="col s12 m6 l6">
+
+                            <svg aria-hidden="true" data-prefix="fas" data-icon="user-tie" class="svg-inline--fa fa-user-tie fa-w-10" width="64px" height="64px" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="#ffd600" d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm95.8 32.6L272 480l-32-136 32-56h-96l32 56-32 136-47.8-191.4C56.9 292 0 350.3 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-72.1-56.9-130.4-128.2-133.8z"></path></svg>
+                            <br><br>
+                            <p class="flow-text light orange-text" style="font-size: 20px;">Business decision makers present their solutions </p>
+
+                        </div>
+
                     </div>
-
-                    <div class="col s12 m4 l3">
-
-                        <svg aria-hidden="true" data-prefix="fas" data-icon="graduation-cap" class="svg-inline--fa fa-graduation-cap fa-w-20" width="64.000000pt" height="64.000000pt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="#ffd600" d="M622.884 199.005l-275.817 85.1a96 96 0 0 1-54.134 0L92.398 222.232c-8.564 11.438-11.018 23.05-11.918 38.335C89.778 266.165 96 276.355 96 288c0 11.952-6.557 22.366-16.265 27.861l16.197 123.096c.63 4.786-3.1 9.043-7.932 9.043H40c-4.828 0-8.562-4.253-7.932-9.044L48.265 315.86C38.557 310.366 32 299.952 32 288c0-12.034 6.646-22.511 16.465-27.976.947-17.951 3.974-33.231 12.152-47.597l-43.502-13.422c-22.876-6.801-22.766-39.241 0-46.01l275.817-85.1a96 96 0 0 1 54.134 0l275.817 85.1c22.877 6.801 22.767 39.241.001 46.01zM356.503 314.682l-.207.064-.207.061a127.998 127.998 0 0 1-72.177 0l-.207-.061-.207-.064-150.914-46.57L120 352c0 35.346 89.543 64 200 64s200-28.654 200-64l-12.583-83.888-150.914 46.57z"></path></svg>
-                        <p class="flow-text light orange-text" style="font-size: 20px;">Students are <br> mere spectators</p>
-
-
-                    </div>
-
-
-                    <div class="col s12 m4 l3">
-
-                        <svg aria-hidden="true" data-prefix="fas" data-icon="user-tie" class="svg-inline--fa fa-user-tie fa-w-10" width="64px" height="64px" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="#ffd600" d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm95.8 32.6L272 480l-32-136 32-56h-96l32 56-32 136-47.8-191.4C56.9 292 0 350.3 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-72.1-56.9-130.4-128.2-133.8z"></path></svg>
-                        <br><br>
-                        <p class="flow-text light orange-text" style="font-size: 20px;">Business decision makers present their solutions </p>
-
-                    </div>
-
-                </div>
                     <!--<div class="col s12 l6">
                             <h4 class="center light" style="font-size: 25px;">Conference on IIOT</h4>
                             <br>
@@ -742,7 +743,7 @@
 <g>
 </g>
 </svg>
-                 <p class="flow-text light orange-text" style="font-size: 20px;">Learn entire approach that goes into building an IoT solution</p>
+                        <p class="flow-text light orange-text" style="font-size: 20px;">Learn entire approach that goes into building an IoT solution</p>
 
 
                     </div>
@@ -790,7 +791,7 @@
 <g>
 </g>
 </svg>
-                    <p class="flow-text light orange-text" style="font-size: 20px;">Students an important part of the event</p>
+                        <p class="flow-text light orange-text" style="font-size: 20px;">Students an important part of the event</p>
 
                     </div>
 
@@ -804,7 +805,7 @@
 	<path d="M113.632,169.025c-3.056-3.059-8.257-3.256-11.526-0.417l-92.019,82.497c-3.284,2.836-3.467,7.663-0.405,10.725   l25.064,25.046c3.064,3.062,7.882,2.891,10.715-0.375l82.522-92.046c2.823-3.266,2.644-8.449-0.421-11.507L113.632,169.025z" fill="#FFDA44"/>
 </g>
 </svg>
-            <p class="flow-text light orange-text" style="font-size: 20px;">Students would build an end to end IoT solution</p>
+                        <p class="flow-text light orange-text" style="font-size: 20px;">Students would build an end to end IoT solution</p>
 
                     </div>
 
@@ -848,7 +849,7 @@
 </g>
 </svg>
 
-                    <p class="flow-text light orange-text" style="font-size: 20px;">Business decision makers all ears to students</p>
+                        <p class="flow-text light orange-text" style="font-size: 20px;">Business decision makers all ears to students</p>
                     </div>
                 </div>
             </div>
@@ -865,10 +866,10 @@
                 <p class="flow-text center" style="font-size: 20px; text-align: left">
 
 
-                   <?xml version="1.0" encoding="iso-8859-1"?>
-<!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 35.236 24.236" style="enable-background:new 0 0 44.236 44.236;" xml:space="preserve">
+                    <?xml version="1.0" encoding="iso-8859-1"?>
+                    <!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                    <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 35.236 24.236" style="enable-background:new 0 0 44.236 44.236;" xml:space="preserve">
 <g>
 	<g>
 
@@ -905,14 +906,7 @@
 </g>
 <g>
 </g>
-</svg>
-
-
-
-
-
-
-                    Exposure to newer technologies and engineering methodologies
+</svg> Exposure to newer technologies and engineering methodologies
                     <br><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 35.236 24.236" style="enable-background:new 0 0 44.236 44.236;" xml:space="preserve">
 <g>
 	<g>
@@ -1306,8 +1300,8 @@
 
                 <h3 class="center orange-text padded-bottom-compact padded-top-cozy" data-aos="zoom-in strong">Industry Benefits</h3>
 
-                <p class="flow-text light padded-bottom-cozy" style="text-align: left">
-                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 35.236 24.236" style="enable-background:new 0 0 44.236 44.236;" xml:space="preserve">
+                <p class="flow-text light padded-bottom-cozy" style="text-align: left; font-size: 20px;">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 35.236 24.236" style="enable-background:new 0 0 44.236 44.236;" xml:space="preserve">
 <g>
 	<g>
 
@@ -1344,8 +1338,7 @@
 </g>
 <g>
 </g>
-</svg>
-                     How IoT can help in taking their organization forward
+</svg> How IoT can help in taking their organization forward
                     <br><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 35.236 24.236" style="enable-background:new 0 0 44.236 44.236;" xml:space="preserve">
 <g>
 	<g>
@@ -1614,7 +1607,7 @@
     <script src="js/aos.js "></script>
     <script src="js/tilt.jquery.min.js "></script>
     <script src="js/script.js "></script>
-   <!-- <script>
+    <!-- <script>
         $(document).ready(function() {
             /* $('#hero-slider').slider({
                 indicators: false,
