--- a/index.html
+++ b/index.html
@@ -577,19 +577,19 @@
     -->
 
         <section>
-            <div class="grey lighten-3">
+            <div class="white">
                 <div class=" container center padded-bottom-cozy ">
 
 
 
                     <h3 class="center light orange-text padded-bottom-compact padded-top-cozy strong " style="font-size: 50px;" data-aos="zoom-in">How IndNX 4.0 is different?</h3>
-
-                    <div class="row">
+        <div class="row">
+                    <div class="col s12 m6 l6">
                         <br>
-                        <h3 class="center light orange-text strong">Traditional Events</h3>
-                        <br><br>
-                        <div class="col s12 m6 l6">
 
+
+                            <h3 class="center light orange-text strong">Traditional Events</h3>
+                            <br><br>
                             <br>
 
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 297 297" enable-background="new 0 0 297 297" width="64px" height="64px">
@@ -613,9 +613,9 @@
                                 <p class="flow-text light orange-text" style="font-size: 20px;text-align: left">Business decision makers present their solutions </p>
                                 <p class="flow-text light orange-text" style="font-size: 20px;text-align: left">No mentoring of students </p>-->
 
-                        </div>
 
-                        <div class="col s12 m6 l6">
+
+
 
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 28.874 28.873" style="enable-background:new 0 0 28.874 28.873;" xml:space="preserve">
 <g>
@@ -659,46 +659,30 @@
 
                             <br><br>
                             <p class="flow-text light orange-text" style="font-size: 20px;">Students just listen <br> about how to do it</p>
-                        </div>
 
-                        <div class="col s12 m6 l6">
+
+
 
                             <svg aria-hidden="true" data-prefix="fas" data-icon="graduation-cap" class="svg-inline--fa fa-graduation-cap fa-w-20" width="64.000000pt" height="64.000000pt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="#ffd600" d="M622.884 199.005l-275.817 85.1a96 96 0 0 1-54.134 0L92.398 222.232c-8.564 11.438-11.018 23.05-11.918 38.335C89.778 266.165 96 276.355 96 288c0 11.952-6.557 22.366-16.265 27.861l16.197 123.096c.63 4.786-3.1 9.043-7.932 9.043H40c-4.828 0-8.562-4.253-7.932-9.044L48.265 315.86C38.557 310.366 32 299.952 32 288c0-12.034 6.646-22.511 16.465-27.976.947-17.951 3.974-33.231 12.152-47.597l-43.502-13.422c-22.876-6.801-22.766-39.241 0-46.01l275.817-85.1a96 96 0 0 1 54.134 0l275.817 85.1c22.877 6.801 22.767 39.241.001 46.01zM356.503 314.682l-.207.064-.207.061a127.998 127.998 0 0 1-72.177 0l-.207-.061-.207-.064-150.914-46.57L120 352c0 35.346 89.543 64 200 64s200-28.654 200-64l-12.583-83.888-150.914 46.57z"></path></svg>
                             <p class="flow-text light orange-text" style="font-size: 20px;">Students are <br> mere spectators</p>
 
 
-                        </div>
-
-
-                        <div class="col s12 m6 l6">
 
                             <svg aria-hidden="true" data-prefix="fas" data-icon="user-tie" class="svg-inline--fa fa-user-tie fa-w-10" width="64px" height="64px" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="#ffd600" d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm95.8 32.6L272 480l-32-136 32-56h-96l32 56-32 136-47.8-191.4C56.9 292 0 350.3 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-72.1-56.9-130.4-128.2-133.8z"></path></svg>
-                            <br><br>
-                            <p class="flow-text light orange-text" style="font-size: 20px;">Business decision makers present their solutions </p>
+                            <br>
+                            <p class="flow-text light orange-text" style="font-size: 20px;">Business decision makers <br>present their solutions </p>
 
-                        </div>
+
 
                     </div>
-                    <!--<div class="col s12 l6">
-                            <h4 class="center light" style="font-size: 25px;">Conference on IIOT</h4>
-                            <br>
-                            <p class="flow-text light green-text" style="font-size: 20px;text-align: left">Learn entire approach that goes into building an IoT solution</p>
-                            <p class="flow-text light green-text" style="font-size: 20px;text-align: left">Students an important part of the event</p>
-                            <p class="flow-text light green-text" style="font-size: 20px;text-align: left">Students would build an end to end IoT solution</p>
-                            <p class="flow-text light green-text" style="font-size: 20px;text-align: left">Business decision makers all ears to students' built use-cases</p>
-                            <p class="flow-text light green-text" style="font-size: 20px;text-align: left">Students would be mentored by market leaders themselves </p>
-                        </div>-->
-                </div>
 
 
-            </div>
-
-            <div class="container center padded-bottom-cozy">
-                <div class="row">
-                    <h3 class="center light orange-text strong">Conference on IIOT</h3>
+                    <div class="col s12 m6 l6">
+                       <br>
+                       <h3 class="center light orange-text strong">Conference on IIOT</h3>
                     <br>
                     <br>
-                    <div class="col s12 m4 l3">
+                       <br>
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 47 47" style="enable-background:new 0 0 47 47;" xml:space="preserve">
 <g>
 	<g id="Layer_1_110_">
@@ -743,13 +727,10 @@
 <g>
 </g>
 </svg>
-                        <p class="flow-text light orange-text" style="font-size: 20px;">Learn entire approach that goes into building an IoT solution</p>
+                        <p class="flow-text light orange-text" style="font-size: 20px;">Entire approach that goes into <br> building an IoT solution</p>
 
-
-                    </div>
-
-                    <div class="col s12 m4 l3">
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 912.1 912.1" style="enable-background:new 0 0 912.1 912.1;" xml:space="preserve">
+<br>
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 912.1 912.1" style="enable-background:new 0 0 912.1 912.1;" xml:space="preserve">
 <g>
 	<g>
 		<path d="M504.607,574.9c102.8,0,186.4-83.601,186.4-186.4s-83.601-186.4-186.4-186.4c-102.799,0-186.4,83.6-186.4,186.4    S401.808,574.9,504.607,574.9z" fill="#FFDA44"/>
@@ -791,13 +772,11 @@
 <g>
 </g>
 </svg>
-                        <p class="flow-text light orange-text" style="font-size: 20px;">Students an important part of the event</p>
+                        <p class="flow-text light orange-text" style="font-size: 20px;">Students an important     <br>  part of the event</p>
 
-                    </div>
+                   <br>
 
-                    <div class="col s12 m4 l3">
-
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
+                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
 <g>
 	<path d="M63.946,118.649c5.727,0,11.353-0.897,16.773-2.625l32.214,32.192l35.279-35.272l-32.199-32.227   c6.207-19.396,1.107-40.888-13.359-55.349C92.356,15.067,78.647,9.396,64.091,9.396c-8.133,0-16.288,1.843-23.605,5.332   c-1.104,0.526-1.877,1.552-2.084,2.755c-0.201,1.203,0.186,2.424,1.045,3.291l33.894,33.902c2.501,2.499,3.881,5.817,3.881,9.339   c0,3.531-1.382,6.843-3.881,9.342c-4.979,4.994-13.684,4.994-18.672-0.013L20.763,39.451c-0.869-0.869-2.118-1.25-3.287-1.048   c-1.206,0.207-2.229,0.98-2.755,2.084c-9.958,20.868-5.69,45.858,10.641,62.177C35.666,112.968,49.368,118.649,63.946,118.649z" fill="#FFDA44"/>
 	<path d="M236.074,181.348c-5.739,0-11.374,0.903-16.798,2.635l-35.631-35.634l-35.303,35.297l35.641,35.64   c-6.194,19.39-1.098,40.876,13.359,55.346c10.301,10.301,24.01,15.973,38.565,15.973c8.137,0,16.291-1.847,23.608-5.335   c1.104-0.525,1.877-1.552,2.084-2.755c0.207-1.203-0.186-2.425-1.045-3.291l-33.893-33.909c-2.496-2.493-3.875-5.805-3.878-9.327   c0-3.528,1.379-6.84,3.884-9.342c4.995-4.998,13.681-4.995,18.666,0.003l33.899,33.893c0.866,0.863,2.075,1.247,3.291,1.048   c1.203-0.21,2.23-0.98,2.755-2.084c9.958-20.865,5.693-45.852-10.638-62.174C264.339,187.029,250.64,181.348,236.074,181.348z" fill="#FFDA44"/>
@@ -805,13 +784,10 @@
 	<path d="M113.632,169.025c-3.056-3.059-8.257-3.256-11.526-0.417l-92.019,82.497c-3.284,2.836-3.467,7.663-0.405,10.725   l25.064,25.046c3.064,3.062,7.882,2.891,10.715-0.375l82.522-92.046c2.823-3.266,2.644-8.449-0.421-11.507L113.632,169.025z" fill="#FFDA44"/>
 </g>
 </svg>
-                        <p class="flow-text light orange-text" style="font-size: 20px;">Students would build an end to end IoT solution</p>
+                        <p class="flow-text light orange-text" style="font-size: 20px;">Students would build an <br>  end to end IoT solution</p>
 
-                    </div>
 
-                    <div class="col s12 m4 l3">
-
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 174.661 174.661" style="enable-background:new 0 0 174.661 174.661;" xml:space="preserve">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 174.661 174.661" style="enable-background:new 0 0 174.661 174.661;" xml:space="preserve">
 <g>
 	<g>
 		<path d="M142.395,29.698c-7.563-16.355-22.542-24.728-34.039-27.103C80.638-3.156,59.558,0.668,45.635,13.888    C22.04,36.295,27.995,77.145,28.263,78.871c0.262,1.702,1.891,2.886,3.544,2.606c1.702-0.262,2.874-1.851,2.612-3.547    c-0.063-0.393-5.711-39.391,15.524-59.537C62.301,6.678,81.537,3.417,107.083,8.7c10.011,2.07,23.054,9.365,29.643,23.617    c8.312,17.991,4.213,43.014-11.862,72.373c-4.39,8.031-6.053,14.729-7.788,21.83c-1.937,7.867-4.11,16.781-10.576,29.715    c-3.824,7.654-16.88,12.982-29.771,12.1c-5.967-0.396-20.389-2.881-25.525-17.714c-6.01-10.54-13.643-29.849-8.507-36.772    c2.962-4,10.352-3.288,15.908-2.064c1.346,0.816,2.968,6.918,3.934,10.577c2.308,8.726,5.045,18.517,12.178,17.981    c0.441,0.024,10.979,0.895,15.202-6.242c3.337-5.626,1.564-13.761-5.401-24.801c5.45-5.236,19.352-20.441,12.775-33.837    c-2.046-4.181-8.659-9.996-17.007-9.996H80.06c-4.713,0.061-11.049,2.058-16.593,10.324c-2.476-7.599-5.542-20.783-1.167-30.702    c2.469-5.611,6.936-9.393,13.643-11.542c4.99-1.62,21.708-3.212,31.438,5.824c7.928,7.344,9.772,20.134,5.498,38.03    c-0.396,1.68,0.64,3.352,2.302,3.763c1.693,0.42,3.355-0.646,3.77-2.305c4.835-20.24,2.381-35.062-7.313-44.046    c-12.823-11.874-32.906-8.687-37.588-7.191c-8.4,2.701-14.273,7.739-17.467,14.979c-7.624,17.278,3.038,40.91,3.504,41.899    c0.505,1.111,1.617,1.82,2.832,1.82s2.326-0.709,2.832-1.814c3.809-8.299,8.777-12.72,14.386-12.793h0.137    c5.298,0,10.103,3.821,11.411,6.497c4.811,9.795-7.934,23.684-13.25,28.208c-1.206,1.022-1.449,2.782-0.569,4.098    c8.662,12.909,7.907,18.322,6.68,20.399c-2.177,3.689-9.204,3.215-9.81,3.215c-2.612-0.049-4.826-8.281-6.18-13.372    c-1.976-7.478-3.69-13.938-8.455-15.01c-10.89-2.466-18.438-0.98-22.408,4.391c-9.198,12.422,6.302,40.419,7.861,43.038    c4.305,12.568,15.521,20.35,30.778,21.373c1.111,0.079,2.207,0.115,3.3,0.109c14.458,0,27.788-6.297,32.458-15.637    c6.776-13.566,9.048-22.835,11.058-31.019c1.705-6.978,3.19-13.007,7.197-20.325C147.643,76.083,151.699,49.844,142.395,29.698z" fill="#FFDA44"/>
@@ -849,9 +825,15 @@
 </g>
 </svg>
 
-                        <p class="flow-text light orange-text" style="font-size: 20px;">Business decision makers all ears to students</p>
+                        <p class="flow-text light orange-text" style="font-size: 20px;">Business decision makers <br> all ears to students</p>
+
                     </div>
+
                 </div>
+
+                </div>
+
+
             </div>
 
         </section>
