--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div class="navbar-fixed">
-            <nav class="white">
+            <nav class=" grey darken-3">
                 <div class="nav-wrapper container">
                     <a href="href="index.html data-target="slide-out" class="sidenav-trigger hide-on-large grey-text text-darken-2">
                         <i class="material-icons">menu</i>
@@ -28,20 +28,20 @@
                     <a href="index.html" class="brand-logo black-text"><img src="images/Logo_.jpg%20copy.png"></a>
                     <ul class="right hide-on-med-and-down">
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="index.html">Home</a>
+                            <a class="waves-effect waves-orange" href="index.html">Home</a>
                         </li>
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="hackathon.html">Hackathon</a>
+                            <a class="waves-effect waves-orange" href="hackathon.html">Hackathon</a>
                         </li>
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="conference.html">Conference</a>
+                            <a class="waves-effect waves-orange" href="conference.html">Conference</a>
                         </li>
 
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="contact.html">Contact</a>
+                            <a class="waves-effect waves-orange" href="contact.html">Contact</a>
                         </li>
                         <li>
-                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
+                            <a class="waves-effect waves-orange" href="faq.html">FAQ</a>
                         </li>
                         <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text">Register</a>
