--- a/faq.html
+++ b/faq.html
@@ -27,7 +27,7 @@
 <body>
     <header>
         <div class="navbar-fixed">
-            <nav class="white">
+            <nav class=" grey darken-3">
                 <div class="nav-wrapper container">
                     <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-large grey-text text-darken-2">
                         <i class="material-icons">menu</i>
