not totally done

--- a/index.html
+++ b/index.html
@@ -172,17 +172,18 @@
         </section>
 
 
-        <div class="divider"></div>
-
-        <section>
-            <div class="container center padded-bottom-cozy">
 
 
 
-                <h3 class="center orange-text padded-bottom-compact padded-top-cozy strong" data-aos="zoom-in">Objectives</h3>
+        <div class=" grey darken-3" style="margin-top: 0px;">
+            <div class="container center padded-bottom-cozy padded-top-cozy" style="margin-left: 150px;">
+
+
+
+                <h3 class="center orange-text strong" data-aos="zoom-in"> Objectives</h3>
                 <br><br><br>
 
-                <div class="row">
+                <div class="row" style="width: 1200px;">
                     <div class="col s12 m4 l3">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 536.229 536.229" style="enable-background:new 0 0 536.229 536.229;" xml:space="preserve">
 <g>
@@ -229,10 +230,10 @@
 </svg>
 
 
-                        <p class="flow-text light orange-text" style="font-size: 20px;">Building an IoT solution</p>
+                        <p class="flow-text light orange-text" style="font-size: 20px;text-align: left;margin-left: 80px">Building an IoT solution</p>
                     </div>
 
-                    <div class="col s12 m4 l3">
+                    <div class="col s12 m4 l3" style="padding-left: 70px">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 512.001 512.001" style="enable-background:new 0 0 512.001 512.001;" xml:space="preserve" width="64px" height="64px">
 <g>
 	<g>
@@ -325,7 +326,7 @@
                         </p>
                     </div>
 
-                    <div class="col s12 m4 l3">
+                    <div class="col s12 m4 l3" style="margin-left: 30px">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="64px" height="64px">
 <g>
 	<g>
@@ -429,10 +430,12 @@
 
             </div>
 
-        </section>
+        </div>
 
 
-        <div class="divider"></div>
+
+
+
 
 
         <div class="parallax-container">
@@ -725,8 +728,8 @@
 
         </section>
 
-        <section class=" grey lighten-3">
-            <div class="container center padded-bottom-cozy grey lighten-3">
+        <section class=" grey darken-3">
+            <div class="container center padded-bottom-cozy">
 
 
 
@@ -1430,7 +1433,7 @@
 
         <div class="divider"></div>
 
-        <section class="padded-comfortable grey lighten-3">
+        <section class="padded-comfortable grey darken-3">
 
             <h3 class="center  orange-text padded-bottom-comfortable" data-aos="zoom-in  strong">Partners</h3>
             <div class="container">
