--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         <p class="flow-text light orange-text" style="font-size: 20px;text-align: left;margin-left: 80px">Building an IoT solution</p>
                     </div>
 
-                    <div class="col s12 m4 l3" style="padding-left: 70px">
+                    <div class="col s12 m4 l3">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 512.001 512.001" style="enable-background:new 0 0 512.001 512.001;" xml:space="preserve" width="64px" height="64px">
 <g>
 	<g>
@@ -326,7 +326,7 @@
                         </p>
                     </div>
 
-                    <div class="col s12 m4 l3" style="margin-left: 30px">
+                    <div class="col s12 m4 l3">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="64px" height="64px">
 <g>
 	<g>
