--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                         <p class="white-text">Date: XX Month 2018</p>
                         <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
                         -->
+                        <img src="images/ciilogo.png" alt="">
                         <img src="images/Logo_.jpg copy.png" alt="logo" style="max-width:80vw; max-height: 40vh">
                     </div>
                     <i class="material-icons white-text padded-top-comfortable animated infinite bounce medium light">keyboard_arrow_down</i>
@@ -180,10 +181,11 @@
 
 
 
-                <h3 class="center orange-text strong" data-aos="zoom-in"> Objectives</h3>
-                <br><br><br>
 
                 <div class="row" style="width: 1200px;">
+                   <h3 class="center orange-text strong" data-aos="zoom-in"> Objectives</h3>
+                <br><br><br>
+
                     <div class="col s12 m4 l3">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 536.229 536.229" style="enable-background:new 0 0 536.229 536.229;" xml:space="preserve">
 <g>
